internal/kgateway/agentgatewaysyncer/testdata/outputs/grpc-routing/missing-backend.status.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: example-grpc-route
  namespace: default
spec: null
status:
  parents:
  - conditions:
    - lastTransitionTime: fake
      message: ""
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: backend(example-grpc-svc.default.svc.cluster.local) not found
      reason: BackendNotFound
      status: "False"
      type: ResolvedRefs
    controllerName: kgateway.dev/agentgateway
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: example-gateway
      namespace: default
---
