internal/kgateway/agentgatewaysyncer/testdata/outputs/grpc-routing/missing-backend.yaml
Binds:
  - key: 8090/default/example-gateway
    port: 8090
Listeners:
  - bindKey: 8090/default/example-gateway
    gatewayName: default/example-gateway
    key: default-example-gateway-grpc
    name: grpc
    protocol: HTTP
Routes:
  - backends:
      - backend:
          port: 9000
          service: default/example-grpc-svc.default.svc.cluster.local
        weight: 1
    key: default.example-grpc-route.0.grpc
    listenerKey: default-example-gateway-grpc
    matches:
      - path:
          exact: /example.grpc.Service/ExampleMethod
    routeName: default/example-grpc-route
