internal/kgateway/agentgatewaysyncer/testdata/outputs/grpc-routing/multi-backend-proxy.yaml
Addresses:
  - service:
      hostname: grpc-svc-2.default.svc.cluster.local
      name: grpc-svc-2
      namespace: default
      ports:
        - appProtocol: HTTP2
          servicePort: 9002
          targetPort: 9002
  - service:
      hostname: grpc-svc-1.default.svc.cluster.local
      name: grpc-svc-1
      namespace: default
      ports:
        - appProtocol: HTTP2
          servicePort: 9001
          targetPort: 9001
Binds:
  - key: 8090/default/example-grpc-gateway
    port: 8090
Listeners:
  - bindKey: 8090/default/example-grpc-gateway
    gatewayName: default/example-grpc-gateway
    key: example-grpc-gateway-agentgateway-autogenerated-k8s-gateway-grpc
    name: grpc
    protocol: HTTP
Routes:
  - backends:
      - kind:
          port: 9001
          service: default/grpc-svc-1.default.svc.cluster.local
        port: 9001
        weight: 50
      - kind:
          port: 9002
          service: default/grpc-svc-2.default.svc.cluster.local
        port: 9002
        weight: 50
    key: default.example-grpc-multi-backend-route.0.grpc
    listenerKey: example-grpc-gateway-agentgateway-autogenerated-k8s-gateway-grpc
    matches:
      - path:
          exact: /example.multi.Service/MultiMethod
    routeName: default/example-grpc-multi-backend-route
